@@ -41,7 +41,15 @@ namespace Pds {
       CxiEndstation = 24,
       XcsEndstation = 25,
       MecEndstation = 26,
-      NumDetector   = 27
+      CxiDg1        = 27,
+      CxiDg2        = 28,
+      CxiDg3        = 29,
+      CxiDg4        = 30,
+      CxiKb1        = 31,
+      CxiDs1        = 32,
+      CxiDs2        = 33,
+      CxiDsu        = 34,
+      NumDetector   = 35
     };
 
     enum Device {
